micro fixes add social link

--- a/index.html
+++ b/index.html
@@ -632,21 +632,35 @@
           >
         </div>
         <div class="social-container">
-          <a class="link" href="" target="_blank" rel="nofollow">
+          <a
+            class="link"
+            href="https://www.instagram.com/olena.diachenko_logist/"
+            target="_blank"
+            rel="nofollow"
+          >
             <img
               src="./images/footer-insta.svg"
               alt="insta"
               width="24"
               height="24"
           /></a>
-          <a class="link" href="" target="_blank" rel="nofollow">
+          <a
+            class="link"
+            href="https://t.me/+a7irHksqlKQxODM6"
+            target="_blank"
+            rel="nofollow"
+          >
             <img
               src="./images/footer-telegram.svg"
               alt="telegram"
               width="24"
               height="24"
           /></a>
-          <a class="link" href="" target="_blank" rel="nofollow"
+          <a
+            class="link"
+            href="https://www.facebook.com/elena.diachenko.77"
+            target="_blank"
+            rel="nofollow"
             ><img
               src="./images/footer-facebook.svg"
               alt="viber"
