--- a/index.html
+++ b/index.html
@@ -661,9 +661,9 @@
     <footer class="footer">
       <div class="container">
         <div class="footer-deals">
-          <a class="link" target="_blank" rel="nofollow" href="nolink"
+          <a class="link" target="_blank" rel="nofollow" href="https://docs.google.com/document/d/1R1rEIMHcwZtBvs8cCNhfDxMaEbHEXMHX/edit?usp=sharing&ouid=102027405777491663701&rtpof=true&sd=true"
             >Договір оферта</a
-          ><a class="link" target="_blank" rel="nofollow" href=""
+          ><a class="link" target="_blank" rel="nofollow" href="https://docs.google.com/document/d/1dC5DfIDoqHIc9SiasZFd6BX5AUHIvI3u/edit?usp=sharing&ouid=102027405777491663701&rtpof=true&sd=true"
             >Політика конфіденційності</a
           >
         </div>
