--- a/index.html
+++ b/index.html
@@ -73,6 +73,9 @@
             Знайдіть себе у сфері транспортної логістики всього за 7 днів і
             будуйте кар’єру в найбільш стабільній та прогнозованій галузі
           </p>
+          <p class="price-today">
+            ЦІНА ДІЙСНА ТІЛЬКИ СЬОГОДНІ <span>22.11.2023</span>
+          </p>
           <button class="header-button" data-action="open-modal">Купити</button>
           <p class="buy-description">
             оплати зараз та отримай чек-лист 🎁<br />
@@ -102,7 +105,7 @@
           </div>
         </div>
       </div>
-      <div class="header-price-container"><p>577,00 грн</p></div>
+      <div class="header-price-container"><p>385,00 грн</p></div>
     </header>
     <main>
       <section class="section-one">
@@ -244,9 +247,11 @@
               і дохідній професії</span
             >
           </p>
-          <button class="three-buy-button" data-action="open-modal">Купити</button>
+          <button class="three-buy-button" data-action="open-modal">
+            Купити
+          </button>
         </div>
-        <div class="sect-three-price-container"><p>577,00 грн</p></div>
+        <div class="sect-three-price-container"><p>385,00 грн</p></div>
       </section>
       <section class="section-four">
         <div class="container">
@@ -363,9 +368,11 @@
             Легко стартуйте у сфері транспортної логістики та збільшуйте свій
             дохід
           </p>
-          <button class="four-buy-button" data-action="open-modal">Купити</button>
+          <button class="four-buy-button" data-action="open-modal">
+            Купити
+          </button>
         </div>
-        <div class="four-price-container"><p>577,00 грн</p></div>
+        <div class="four-price-container"><p>385,00 грн</p></div>
       </section>
       <section class="section-five">
         <div class="container">
@@ -653,17 +660,27 @@
             </p>
             <p class="price-container-check">НЕ ЗВОЛІКАЙТЕ</p>
           </div>
-          <button class="five-buy-button" data-action="open-modal" >Купити</button>
+          <button class="five-buy-button" data-action="open-modal">
+            Купити
+          </button>
         </div>
-        <div class="five-price-container"><p>577,00 грн</p></div>
+        <div class="five-price-container"><p>385,00 грн</p></div>
       </section>
     </main>
     <footer class="footer">
       <div class="container">
         <div class="footer-deals">
-          <a class="link" target="_blank" rel="nofollow" href="https://docs.google.com/document/d/1R1rEIMHcwZtBvs8cCNhfDxMaEbHEXMHX/edit?usp=sharing&ouid=102027405777491663701&rtpof=true&sd=true"
+          <a
+            class="link"
+            target="_blank"
+            rel="nofollow"
+            href="https://docs.google.com/document/d/1R1rEIMHcwZtBvs8cCNhfDxMaEbHEXMHX/edit?usp=sharing&ouid=102027405777491663701&rtpof=true&sd=true"
             >Договір оферта</a
-          ><a class="link" target="_blank" rel="nofollow" href="https://docs.google.com/document/d/1dC5DfIDoqHIc9SiasZFd6BX5AUHIvI3u/edit?usp=sharing&ouid=102027405777491663701&rtpof=true&sd=true"
+          ><a
+            class="link"
+            target="_blank"
+            rel="nofollow"
+            href="https://docs.google.com/document/d/1dC5DfIDoqHIc9SiasZFd6BX5AUHIvI3u/edit?usp=sharing&ouid=102027405777491663701&rtpof=true&sd=true"
             >Політика конфіденційності</a
           >
         </div>
@@ -721,7 +738,7 @@
         </div>
       </div>
     </footer>
-     <div class="backdrop js-backdrop">
+    <div class="backdrop js-backdrop">
       <div class="modal">
         <button
           class="modal-close-button"
@@ -737,6 +754,7 @@
         </button>
         <div id="kwiga-widget-1700044765"></div>
       </div>
+    </div>
     <script src="./js/jquery-3.7.0.min.js" type="module"></script>
     <script src="./js/faq.js" type="module"></script>
     <script src="./js/siema.min.js"></script>
