--- a/index.html
+++ b/index.html
@@ -656,7 +656,7 @@
           </div>
           <div class="price-container">
             <p class="price-discription">
-              ЦІНА ДІЙСНА ДО <span>20.11.2023</span>
+              ЦІНА ДІЙСНА ТІЛЬКИ СЬОГОДНІ <span>22.11.2023</span>
             </p>
             <p class="price-container-check">НЕ ЗВОЛІКАЙТЕ</p>
           </div>
