--- a/index.html
+++ b/index.html
@@ -102,9 +102,7 @@
           </div>
         </div>
       </div>
-      <p class="price-today">
-        ЦІНА ДІЙСНА ТІЛЬКИ СЬОГОДНІ <span>22.11.2023</span>
-      </p>
+      <p class="price-today">ЦІНА ДІЙСНА ТІЛЬКИ СЬОГОДНІ</p>
       <div class="header-price-container"><p>385,00 грн</p></div>
     </header>
     <main>
@@ -655,9 +653,7 @@
             </div>
           </div>
           <div class="price-container">
-            <p class="price-discription">
-              ЦІНА ДІЙСНА ТІЛЬКИ СЬОГОДНІ <span>22.11.2023</span>
-            </p>
+            <p class="price-discription">ЦІНА ДІЙСНА ТІЛЬКИ СЬОГОДНІ</p>
             <p class="price-container-check">НЕ ЗВОЛІКАЙТЕ</p>
           </div>
           <button class="five-buy-button" data-action="open-modal">
