--- a/index.html
+++ b/index.html
@@ -369,15 +369,10 @@
           </div>
           <div class="four-wrapper-two">
             <h3 class="wrapper-two-title">
-              Після оплати на електронну пошту ви отримаєте:
+              Якщо ви на порозі змін і вирішуєте, який же новий шлях обрати, то
+              цей Інтенсив для вас!
             </h3>
             <ul class="wrapper-two-list list">
-              <li class="list-item">
-                <p>
-                  Якщо ви на порозі змін і вирішуєте, який же новий шлях обрати,
-                  то цей Інтенсив для вас!
-                </p>
-              </li>
               <li class="list-item">
                 <p>
                   Перевага Інтенсиву в тому, що ви можете за один день отримати
