--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
               </li>
               <li class="list-item">
                 <p>
-                  Незалезно від тієї точки, в якій ви зараз знаходитесь і
+                  Незалежно від тієї точки, в якій ви зараз знаходитесь і
                   незалежно від вашого досвіду, навичок та знань в сфері
                   транспортної логістики - це ваш перший крок при обранні
                   професійного навчання та побудові майбутньої успішної кар’єри
